add about us button to main page

--- a/Generator/templates/generator/home.html
+++ b/Generator/templates/generator/home.html
@@ -44,7 +44,9 @@
             </div>
             <input type="submit" value="Generate Password" name="submit_button" class="btn btn-primary">
         </form>
+        <a href="{% url 'aboutus' %}" class="btn btn-success">About Us</a>
     </div>
+
     <div class="col-sm"></div>
     </div>
   </body>
